# erraticamo

./: .gitignore  CMakeLists.txt  README.md
src/: camo-generator.cc  camo-generator.hh  erraticamo.cc  layer.cc  layer.hh  noise.cc  noise.hh  utils.cc  utils.hh  utils.hxx
